--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
             <div class="nav">
                 <div class="navBar">
                     <div class="navBtn">
-                        打开菜单
+                        <img src="images/list.png" alt="菜单">
                     </div>
-                    <ul>
-                        <li><a href="">首页</a></li>
-                        <li><a href="">关于我们</a></li>
+                    <ul class="navList">
+                        <li><a href="javascript:;">首页</a></li>
+                        <li><a href="javascript:;">关于我们</a></li>
                         <li class="infoNews">
-                            <a href="">咨询新闻</a>
+                            <a href="javascript:;">咨询新闻</a>
                             <ul>
                                 <li class="">
                                     <a href="">
@@ -42,8 +42,8 @@
                                 </li>
                             </ul>
                         </li>
-                        <li><a href="">惠发产品</a></li>
-                        <li><a href="">联系我们</a></li>
+                        <li><a href="javascript:;">惠发产品</a></li>
+                        <li><a href="javascript:;">联系我们</a></li>
                     </ul>
                 </div>
                 <form action="#" method="post">
@@ -77,6 +77,199 @@
                 <!--<div class="swiper-slide"><img class="img" src="images/banner.jpg" alt="banner"></div>-->
             </div>
             <div class="pagination"></div>
+        </div>
+    </section>
+    <section class="aboutHuifa">
+        <div class="container">
+            <h2>关于惠发</h2>
+            <div class="Word">
+                <div class="left">
+                    <p>
+                        惠州市越发粮油贸易商行（原名惠州市惠发粮油贸易商行），从一九九二年开始经营。经营初期营业量较少，本行在此基础上进一步对惠州市场进行了解，精心研究总结粮油经营经验，并掌握对粮食产品来源产地及品种质量分析。不到三个月得到惠州市民认可，惠发丝苗米走红。
+                    </p>
+                    <p>
+                        当时惠发新品牌开始出台，我行进一步派出人员到惠州市各区域、县城镇销售订货，同时也打向汕尾、海丰、陆丰各县城镇，所以销售量快速增加。一条生产加工线不够供应，增加到二条加工线，是一家集大米加工、生产、配送为一体的民营企业。
+                    </p>
+                </div>
+                <div class="right">
+                    <img src="images/aboutHF.png" alt="关于惠发">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="huiFaPreduct">
+        <div class="container">
+            <div class="swiper-container1">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide red-slide">
+                        <div class="title">
+                            <ul>
+                                <li>
+                                    <img src="images/product1.png" alt="product1">
+                                </li>
+                                <li>
+                                    <img src="images/product2.png" alt="product2">
+                                </li>
+                                <li>
+                                    <img src="images/product3.png" alt="product3">
+                                </li>
+                                <li>
+                                    <img src="images/product4.png" alt="product4">
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="swiper-slide red-slide">
+                        <div class="title">
+                            <ul>
+                                <li>
+                                    <img src="images/product1.png" alt="product1">
+                                </li>
+                                <li>
+                                    <img src="images/product2.png" alt="product2">
+                                </li>
+                                <li>
+                                    <img src="images/product3.png" alt="product3">
+                                </li>
+                                <li>
+                                    <img src="images/product4.png" alt="product4">
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="swiper-slide red-slide">
+                        <div class="title">
+                            <ul>
+                                <li>
+                                    <img src="images/product1.png" alt="product1">
+                                </li>
+                                <li>
+                                    <img src="images/product2.png" alt="product2">
+                                </li>
+                                <li>
+                                    <img src="images/product3.png" alt="product3">
+                                </li>
+                                <li>
+                                    <img src="images/product4.png" alt="product4">
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="pagination1"></div>
+            </div>
+
+        </div>
+    </section>
+    <section class="news">
+        <div class="container">
+            <h2>新闻动态</h2>
+            <div>
+                <ul class="tap">
+                    <li datatype="newsHF" class="active">惠发新闻</li>
+                    <li datatype="newsIndustry">行业资讯</li>
+                </ul>
+                <ul class="newsNum newsHF">
+                    <li class="newsList">
+                        <div>
+                            <img src="images/news1.png" alt="">
+                        </div>
+                        <div>
+                            <h3>一粒稻米的改革</h3>
+                            <p>
+                                经过收割、翻晒、装袋，然后送往稻谷加工厂生产出稻米，江良清把原来便宜求人要……
+                            </p>
+                            <div>
+                                <a href="javascript:;">
+                                    查看更多
+                                </a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="newsList second">
+                        <div>
+                            <img src="images/news2.png" alt="">
+                        </div>
+                        <div>
+                            <h3> 丝苗米素有“中国米中之王”</h3>
+                            <p>
+                                丝苗米素有“中国米中之王”之称，。以其米粒洁白晶莹，油质丰富，成饭香气浓郁……
+                            </p>
+                            <div>
+                                <a href="javascript:;">
+                                    查看更多
+                                </a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="newsList">
+                        <div>
+                            <img src="images/news3.png" alt="">
+                        </div>
+                        <div>
+                            <h3>五常大米是中国最好的大米</h3>
+                            <p>
+                                五常大米中最优的品种是五优稻4号，其发明人、77岁的田永泰说，2000年秋他……
+                            </p>
+                            <div>
+                                <a href="javascript:;">
+                                    查看更多
+                                </a>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+                <ul class="newsNum newsIndustry">
+                    <li class="newsList">
+                        <div>
+                            <img src="images/news1.png" alt="">
+                        </div>
+                        <div>
+                            <h3>一粒稻米的改革</h3>
+                            <p>
+                                经过收割、翻晒、装袋，然后送往稻谷加工厂生产出稻米，江良清把原来便宜求人要……
+                            </p>
+                            <div>
+                                <a href="javascript:;">
+                                    查看更多
+                                </a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="newsList second">
+                        <div>
+                            <img src="images/news2.png" alt="">
+                        </div>
+                        <div>
+                            <h3> 丝苗米素有“中国米中之王”</h3>
+                            <p>
+                                丝苗米素有“中国米中之王”之称，。以其米粒洁白晶莹，油质丰富，成饭香气浓郁……
+                            </p>
+                            <div>
+                                <a href="javascript:;">
+                                    查看更多
+                                </a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="newsList">
+                        <div>
+                            <img src="images/news1.png" alt="">
+                        </div>
+                        <div>
+                            <h3> 五常大米是中国最好的大米</h3>
+                            <p>
+                                五常大米中最优的品种是五优稻4号，其发明人、77岁的田永泰说，2000年秋他……
+                            </p>
+                            <div>
+                                <a href="javascript:;">
+                                    查看更多
+                                </a>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
     </section>
     <footer>
@@ -154,14 +347,54 @@
             $('.pagination').css('top',height-30);
             console.log(height);
         }
-        $(function () {
+//        $(function () {
+//            resizeLb();
+//
+//        });
+        window.onload = function () {
             resizeLb();
-        });
+        };
         window.onresize=function () {
             resizeLb();
+        };
+
+        //第二个滑动
+        var mySwiper1 = new Swiper('.swiper-container1',{
+            pagination: '.pagination1',
+            paginationClickable: true,
+            moveStartThreshold: 100
+        });
+
+        //tap切换
+        $('.tap li').on('click',function () {
+            var active='.'+$(this).attr('datatype');
+            $('.tap li').each(function (index,item){
+                $(this).removeClass('active');
+            });
+            $(this).addClass('active');
+            $('ul.newsNum').each(function (index,item) {
+                $(this).hide()
+            });
+            $(active).show();
+        });
+
+        //移动端
+        if(parseFloat(document.body.clientWidth)< 930){
+            $('.infoNews').on('click',function () {
+               $(this).children('ul').show();
+            });
+            var btnShow=false;
+            $('.navBtn').on('click',function () {
+                if(btnShow){
+                    $('.navList').removeClass('active');
+                    btnShow=false;
+                }else {
+                    $('.navList').addClass('active');
+                    $('.navList').css('overflow','auto');
+                    btnShow=true;
+                }
+            })
         }
-
-
     </script>
 </body>
 </html>
