--- a/productDisplay.html
+++ b/productDisplay.html
@@ -18,44 +18,44 @@
 </head>
 <body>
     <header>
-        <nav class="container">
-            <div class="logo">
-                <img src="images/logo.png" alt="">
-            </div>
-            <div class="nav">
-                <div class="navBar">
-                    <div class="navBtn">
-                        <img src="images/list.png" alt="菜单">
-                    </div>
-                    <ul class="navList">
-                        <li><a href="index.html">首页</a></li>
-                        <li><a href="aboutUs.html">关于我们</a></li>
-                        <li class="infoNews">
-                            <a href="javascript:;">咨询新闻</a>
-                            <ul>
-                                <li class="">
-                                    <a href="">
-                                    行业新闻
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                    公司新闻
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li><a href="product.html">惠发产品</a></li>
-                        <li><a href="javascript:;">联系我们</a></li>
-                    </ul>
+    <nav class="container">
+        <div class="logo">
+            <img src="images/logo.png" alt="">
+        </div>
+        <div class="nav">
+            <div class="navBar">
+                <div class="navBtn">
+                    <img src="images/list.png" alt="菜单">
                 </div>
-                <form action="#" method="post">
-                    <img id="mSerch" src="images/icon-magnifier.png" alt="搜索按钮">
-                    <input id="serchInput" type="text" placeholder="输入关键词">
-                </form>
+                <ul class="navList">
+                    <li><a href="index.html">首页</a></li>
+                    <li><a href="aboutUs.html">关于我们</a></li>
+                    <li class="infoNews">
+                        <a href="javascript:;">咨询新闻</a>
+                        <ul>
+                            <li class="">
+                                <a href="newsInformation.html">
+                                    行业新闻
+                                </a>
+                            </li>
+                            <li>
+                                <a href="news.html">
+                                    公司新闻
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li><a href="product.html">惠发产品</a></li>
+                    <li><a href="contactUs.html">联系我们</a></li>
+                </ul>
             </div>
-        </nav>
-    </header>
+            <form action="#" method="post">
+                <img id="mSerch" src="images/icon-magnifier.png" alt="搜索按钮">
+                <input id="serchInput" type="text" placeholder="输入关键词">
+            </form>
+        </div>
+    </nav>
+</header>
     <section class="display">
         <div class="head">
             <picture>
