--- a/aboutUs.html
+++ b/aboutUs.html
@@ -34,19 +34,19 @@
                             <a href="javascript:;">咨询新闻</a>
                             <ul>
                                 <li class="">
-                                    <a href="">
-                                    行业新闻
+                                    <a href="newsInformation.html">
+                                        行业新闻
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="">
-                                    公司新闻
+                                    <a href="news.html">
+                                        公司新闻
                                     </a>
                                 </li>
                             </ul>
                         </li>
                         <li><a href="product.html">惠发产品</a></li>
-                        <li><a href="javascript:;">联系我们</a></li>
+                        <li><a href="contactUs.html">联系我们</a></li>
                     </ul>
                 </div>
                 <form action="#" method="post">
