--- a/productDisplay.html
+++ b/productDisplay.html
@@ -58,10 +58,10 @@
 </header>
     <section class="display">
         <div class="head">
-            <picture>
+            <plsicture>
                 <source srcset="images/productBg1.jpg" media="(max-width: 600px)">
                 <img class="img" srcset="images/productBg.png" alt="pic">
-            </picture>
+            </plsicture>
         </div>
         <div class="displayShow container">
             <h2 class="h2Header">七丝软粘米</h2>
